-- 2016 (c) Traderwave Pte Ltd
-- All Rights Reserved
name:                token-service
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/token-service#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Token
  other-modules:       Token.Data
                     , Token.Registry
  build-depends:       aeson
                     , lens-aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , hedis
                     , lens
                     , random
                     , text
  default-language:    Haskell2010

executable token-service-exe
  hs-source-dirs:      app
  Other-Modules:       TConfig
  Main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , token-service
                     , scotty
                     , lens
                     , aeson
                     , lens-aeson
                     , hedis
                     , configurator
                     , text
  default-language:    Haskell2010

test-suite token-service-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , token-service
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/token-service
